# drovi

./: .dockerignore  .env.docker  .env.example  .gitignore  APP.md  DROVI_EXTENSIBILITY_REFACTOR_PLAN.md  DROVI_EXTENSIBILITY_REFACTOR_TASKS.md  DROVI_FRONTIER_AGENTS_PLAN.md  DROVI_FRONTIER_AGENTS_TASKS.md  DROVI_NEW_PARADIGM_PLAN.md  DROVI_NEW_PARADIGM_TASKS.md  DROVI_REMEDIATION_TASKS.md  DROVI_SWISS_PRIVATE_BANK_PLAN.md  DROVI_SWISS_PRIVATE_BANK_TASKS.md  DROVI_WHATS_LEFT_PLAN.md  DROVI_WHATS_LEFT_TASKS.md  DROVI_WORLD_BRAIN_INGESTION_MATRIX.md  DROVI_WORLD_BRAIN_MARKETING_PLAN.md  DROVI_WORLD_BRAIN_PLAN.md  DROVI_WORLD_BRAIN_TASKS.md  Dockerfile  IMPERIUM_PLAN.md  IMPERIUM_TASKS.md  NEW_PARADIGM.md  README.md  REWORK.md  TRANSFORMATIVE_THINKING.md  TRANSFORMATIVE_THINKING_TASKS.md  VERTICALS.md  biome.json  docker-compose.dev.yml  docker-compose.yml  nixpacks.toml  package.json  playwright.config.ts  railway.toml  research.md  turbo.json  vitest.admin.config.ts  vitest.browser.config.ts  (+6 more)
apps/drovi-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/: Cargo.toml  DESKTOP_SETUP.md  tauri.conf.json
drovi-intelligence/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  direct_comparison_results.json  docker-compose.override.yml  docker-compose.yml  importlinter.ini  porter.yaml  pyproject.toml  railway.toml  seed_results.jsonl  test_results_comparison.json  test_results_together.json
drovi-intelligence/.coverage/: baseline.json
drovi-intelligence/alembic/: __init__.py  env.py
drovi-intelligence/alembic/versions/: 001_create_enums.py  002_create_core_tables.py  003_create_contact_table.py  004_create_uio_tables.py  005_create_uio_extension_tables.py  006_create_source_tables.py  007_add_contact_brief_column.py  008_create_live_session_tables.py  009_create_api_keys_table.py  010_add_rls_policies.py  011_update_rls_policies_internal.py  012_evidence_retention_audit.py  013_rls_evidence_audit.py  014_audit_log_table.py  015_connector_webhook_inbox_outbox.py  016_create_unified_event_model.py  017_create_contact_identity_table.py  018_create_signal_candidate_table.py  019_add_bitemporal_fields_to_uios.py  020_add_signal_candidate_processing_fields.py  021_update_rls_new_tables_internal.py  022_add_signal_candidate_status_index.py  023_add_uio_id_and_unique_uem.py  024_add_supersession_fields_to_uio_details.py  025_add_segment_hash_to_unified_object_source.py  026_add_brief_fields_and_task_extraction_context.py  027_add_org_notification_emails.py  028_add_sensor_permission_table.py  029_phase2_bitemporal_truth.py  030_add_confidence_calibration_event.py  031_continuum_runtime.py  032_actuation_plane.py  033_audit_ledger_chain.py  034_simulation_engine.py  035_continuum_exchange.py  036_continuum_exchange_metadata.py  037_add_user_password_hash.py  038_add_invite_email.py  039_add_entity_versions.py  040_background_jobs.py  (+30 more)
drovi-intelligence/config/: kafka_topology.yaml  source_catalog.yaml  source_onboarding_checklist.md  world_brain_slos.yaml
drovi-intelligence/contracts/api/: world_brain_counterfactual_lab.v1.json  world_brain_obligation_sentinel.v1.json  world_brain_tape.v1.json
drovi-intelligence/deploy/backup/: AGENTOS_BACKUP_DRILL.md  DR_RUNBOOK.md  README.md
drovi-intelligence/deploy/monitoring/: alerts.yml  slo.md
drovi-intelligence/deploy/observability/: README.md  alertmanager.yml  grafana-dashboard.json  grafana-imperium-dashboard.json  prometheus-alerts.yml  prometheus.yml
drovi-intelligence/deploy/pilot/: INTERNAL_PILOT.md
drovi-intelligence/deploy/porter/: DEPLOYMENT.md  env.example
drovi-intelligence/deploy/production/: AGENTOS_READINESS_CHECKLIST.md
drovi-intelligence/deploy/runbooks/: AGENTOS_OPERATIONS_RUNBOOK.md
drovi-intelligence/docker/: docker-compose.infrastructure.yml  kafka-connect-falkordb.properties  mcp-server.Dockerfile
drovi-intelligence/evaluation/: baseline_metrics.json  evaluate.py  generate_goldset.py  goldset.jsonl  redteam.jsonl
drovi-intelligence/ingestion-worker/: Dockerfile  go.mod
drovi-intelligence/openapi/: openapi.json
drovi-intelligence/scripts/: backfill_related_conversations.py  backfill_unified_events.py  backup_falkordb.sh  backup_minio.sh  backup_postgres.sh  cleanup_garbage.py  coverage_ratchet.py  create_pilot.py  dev.sh  drift_report.py  enqueue_world_brain_maintenance.py  export_corrections_dataset.py  finetune.py  generate_openapi.py  generate_world_brain_event_contracts.py  generate_world_brain_provenance.py  load_test.py  restore_postgres.sh  rls_smoke_test.py  run_load_test.sh  run_regression_eval.sh  seed_agentos_demo.py  seed_agentos_starter_packs.py  seed_demo_org.py  seed_graph.py  seed_intelligence.py  test_direct_comparison.py  test_e2e.sh  test_graph.sh  test_integration.py  test_integration.sh  test_nl_search.sh  test_provider_comparison.py  test_unit.sh  verify_backups.sh  verify_dr_targets.py  world_brain_autoscale.py  world_brain_sla_report.py
drovi-intelligence/src/: __init__.py  config.py
drovi-intelligence/src/actuation/: __init__.py  models.py  registry.py  service.py  webhook.py
drovi-intelligence/src/agentos/: __init__.py
drovi-intelligence/src/agents/: __init__.py  ag2_integration.py  context.py  langgraph_workflows.py  sessions.py
drovi-intelligence/src/analytics/: blindspot_detection.py  pattern_discovery.py  reporting.py
drovi-intelligence/src/api/: main.py
drovi-intelligence/src/attention/: __init__.py  engine.py
drovi-intelligence/src/audit/: log.py
drovi-intelligence/src/auth/: __init__.py  admin_accounts.py  api_key.py  context.py  internal_service_jwt.py  middleware.py  permissions.py  pilot_accounts.py  private_sources.py  rate_limit.py  scopes.py
drovi-intelligence/src/candidates/: processor.py
drovi-intelligence/src/causal/: __init__.py  benchmark.py  engine.py
drovi-intelligence/src/compliance/: dlp.py
drovi-intelligence/src/connectors/: __init__.py  bootstrap.py  cursors.py  (+11 more)
drovi-intelligence/tests/: __init__.py  conftest.py  test_orchestrator.py
services/imperium-backend/: Cargo.toml  Dockerfile  README.md
(+2115 files in other folders)
