[project]
name = "drovi-intelligence"
version = "0.1.0"
description = "State-of-the-art AI backend for Drovi Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Drovi", email = "team@drovi.app" }]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",

    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",

    # LLM Providers
    "litellm>=1.50.0",
    "together>=2.0.0a17",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.0",

    # CLI
    "click>=8.1.0",

    # FalkorDB (Graph Database)
    "falkordb>=1.0.0",
    "redis>=5.0.0",

    # Graphiti - Agentic Memory SDK
    "graphiti-core[falkordb]>=0.5.0",

    # PostgreSQL
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "prometheus-client>=0.21.0",

    # Async utilities
    "aiofiles>=24.1.0",

    # Job Scheduling
    "APScheduler>=3.10.0",

    # OAuth & Authentication
    "cryptography>=42.0.0",

    # API Clients (for connectors)
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "slack-sdk>=3.27.0",
    "notion-client>=2.2.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Kafka Streaming
    "confluent-kafka>=2.3.0",

    # Multi-Agent (AG2/AutoGen)
    "ag2>=0.4.0",

    # Graph Algorithms
    "networkx>=3.2.0",
    "faster-whisper>=1.0.0",
    "boto3>=1.34.0",
    "anyio>=4.4.0",
    "pyannote.audio>=3.1.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "locust>=2.32.0",
    "freezegun>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise from
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --import-mode=importlib"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
