[workspace]
members = [
  "crates/imperium-api",
  "crates/imperium-worker",
  "crates/imperium-domain",
  "crates/imperium-infra",
  "crates/imperium-market",
  "crates/imperium-news",
  "crates/imperium-brief",
  "crates/imperium-portfolio",
  "crates/imperium-business",
  "crates/imperium-risk",
  "crates/imperium-alerts",
  "crates/imperium-notify",
  "crates/imperium-journal",
  "crates/imperium-connectors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Imperium Team"]

[workspace.dependencies]
axum = "0.8"
async-nats = "0.42"
dotenvy = "0.15"
http = "1"
redis = { version = "0.32", features = ["tokio-rustls-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
