[package]
name = "imperium-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
http.workspace = true
imperium-infra = { path = "../imperium-infra" }
imperium-domain = { path = "../imperium-domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
uuid.workspace = true
imperium-market = { path = "../imperium-market" }
imperium-news = { path = "../imperium-news" }
imperium-brief = { path = "../imperium-brief" }
imperium-portfolio = { path = "../imperium-portfolio" }
imperium-business = { path = "../imperium-business" }
imperium-risk = { path = "../imperium-risk" }
imperium-alerts = { path = "../imperium-alerts" }
imperium-notify = { path = "../imperium-notify" }
imperium-journal = { path = "../imperium-journal" }
imperium-connectors = { path = "../imperium-connectors" }

[dev-dependencies]
tokio.workspace = true
