[package]
name = "imperium-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-nats.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
http.workspace = true
imperium-domain = { path = "../imperium-domain" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
