[package]
name = "imperium-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
imperium-infra = { path = "../imperium-infra" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
imperium-domain = { path = "../imperium-domain" }
imperium-market = { path = "../imperium-market" }
imperium-news = { path = "../imperium-news" }
imperium-brief = { path = "../imperium-brief" }
imperium-portfolio = { path = "../imperium-portfolio" }
imperium-business = { path = "../imperium-business" }
imperium-risk = { path = "../imperium-risk" }
imperium-alerts = { path = "../imperium-alerts" }
imperium-notify = { path = "../imperium-notify" }
imperium-journal = { path = "../imperium-journal" }
imperium-connectors = { path = "../imperium-connectors" }
